@@ -5,8 +5,6 @@ class Make_Zip {
 
 	private array $exclude_files;
 
-	private string $target_dir;
-
 	private string $plugin_dir;
 
 	private string $zip_base;
@@ -18,7 +16,13 @@ class Make_Zip {
 	private int $plugin_dir_len;
 
 	public function __construct() {
-		$this->exclude_dirs = [ '.git', '.idea', 'tests' ];
+		$this->exclude_dirs = [
+			'.git',
+			'.idea',
+			'bin',
+			'node_modules',
+			'tests',
+		];
 
 		$this->exclude_files = [
 			'.',
@@ -30,17 +34,17 @@ class Make_Zip {
 			'README.md',
 		];
 
-		$this->target_dir = dirname( __DIR__, 2 );
+		$target_dir = dirname( __DIR__, 2 );
+
 		$this->plugin_dir = dirname( __DIR__ );
+		$this->zip_base   = basename( $this->plugin_dir );
+		$this->zip_file   = "$target_dir/$this->zip_base.zip";
 
-		$this->zip_base = basename( $this->plugin_dir );
-		$this->zip_file = "$this->target_dir/$this->zip_base.zip";
-
-		$this->target_dir_len = strlen( $this->target_dir ) + 1;
+		$this->target_dir_len = strlen( $target_dir ) + 1;
 		$this->plugin_dir_len = strlen( $this->plugin_dir ) + 1;
 	}
 
-	public function make() {
+	public function make(): void {
 		if ( file_exists( $this->zip_file ) ) {
 			unlink( $this->zip_file );
 		}
@@ -92,9 +96,9 @@ class Make_Zip {
 
 		if ( false !== $slash_pos ) {
 			return substr( $path, 0, $slash_pos );
-		} else {
-			return '';
 		}
+
+		return '';
 	}
 
 	private function is_excluded_dir( SplFileInfo $info ): bool {
@@ -119,6 +123,6 @@ class Make_Zip {
 	}
 }
 
-if ( 'cli' === php_sapi_name() ) {
+if ( 'cli' === PHP_SAPI ) {
 	( new Make_Zip() )->make();
 }
