@@ -1,3 +1,11 @@
+ongoing
+-------
+- Fix: Make_Zip class code update
+  - 'node_modules', and 'bin' directories are excluded.
+  -  Code improvement.
+
+
+
 1.3.2
 -----
 2022-02-15
